now actually works

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html>
+<html style='height: 100%'>
 	<head>
-		<script src='lzw.js'></script>
-		<script src='12bitbuffer.js'></script>
-		<script src='main.js'></script>
+		<meta charset="utf-8">
+		<script src='lzw.min.js'></script>
 	</head>
 	<body style="margin: 0; padding: 0; overflow: hidden; width: 100%; height: 100%">
-		<div id='in'><textarea id='ta'></textarea></div>
+		<div id='in'><textarea id='ta' style='width: 80%; height: 300px'></textarea></div>
 		<a href='#' id='compress'> compress </a>
-		<div id='out'></div>
+		<div id='out'><textarea id='to' style='width: 80%; height: 300px'></textarea></div>
 	</body>
 </html>
